--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ passlib = "^1.7.4"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
 alembic = "^1.13.1"
 aiosqlite = "^0.19.0"
+pytest-sqlalchemy-mock = "^0.1.5"
 
 
 [build-system]
